--- a/templates/blogengine/post_list.html
+++ b/templates/blogengine/post_list.html
@@ -1,10 +1,11 @@
 {% extends "blogengine/includes/base.html" %}
-{% block content %}
-    {% for post in object_list %}
-        <div class="post">
-            <h1>{{ post.title }}</h1>
-            <h3>{{ post.pub_date }}</h3>
-            <p>{{ post.text }}</p>
-        </div>
-    {% endfor %}
-{% endblock content %}
+    {% load custom_markdown %}
+    {% block content %}
+        {% for post in object_list %}
+            <div class="post">
+                <h1>{{ post.title }}</h1>
+                <h3>{{ post.pub_date }}</h3>
+                <p>{{ post.text|custom_markdown }}</p>
+            </div>
+        {% endfor %}
+    {% endblock content %}
