--- a/templates/blogengine/post_list.html
+++ b/templates/blogengine/post_list.html
@@ -1,4 +1,5 @@
 {% extends "blogengine/includes/base.html" %}
+
     {% load custom_markdown %}
     {% block content %}
         {% for post in object_list %}
@@ -8,4 +9,13 @@
                 <p>{{ post.text|custom_markdown }}</p>
             </div>
         {% endfor %}
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Previous Page</a>
+        {% endif %}
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Next page</a>
+        {% endif %}
     {% endblock content %}
