--- a/templates/blogengine/post_detail.html
+++ b/templates/blogengine/post_detail.html
@@ -7,5 +7,8 @@
             <h1>{{ object.title }}</h1>
             <h3>{{ object.pub_date }}</h3>
             <p>{{ post.text|custom_markdown }}</p>
-        </div>        
+
+            <h4>Comments</h4>
+            <div class="fb-comments" data-href="http://{{ post.site }}{{ post.get_absolute_url }}" data-width="470" data-num-posts="10"></div>
+        </div>
     {% endblock content %}
