--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title %}My Django Blogz0r{% endblock title %}</title>
+        <title>{% block title %}bl0gzor{% endblock title %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -44,7 +44,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a href="" class="brand">My Django Blogz0r</a>
+                    <a href="" class="brand">Bl0gzor</a>
                     <div class="nav-collapse collapse">
                     </div>
                 </div>
@@ -54,7 +54,7 @@
         <div class="container">
             {% block header %}
                 <div class="page-header">
-                    <h1>My Django Blogz0r</h1>
+                    <h1>Welcome to the blog</h1>
                 </div>
             {% endblock header %}
 
