--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="{% static 'bower_components/html5-boilerplate/css/main.css' %}">
         <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'css/code.css' %}">
 
         <script src="{% static 'bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js' %}"></script>
         
@@ -36,7 +38,7 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-        <div class="navbar navbar-static-left navbar-inverse">
+        <div class="navbar navbar-static-top navbar-inverse">
             <div class="navbar-inner">
                 <div class="container">
                     <a class="btn btn-navbar" data-toogle="collapse" data-target=".nav-collapse">
