--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title %}bl0gzor{% endblock title %}</title>
+        <title>{% block title %}Welcome to the full-stack entrepreneur blog. Backend - Frontend - DevOps - Business - Marketing{% endblock title %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a href="" class="brand">Bl0gzor</a>
+                    <a href="" class="brand">FSE Blog</a>
                     <div class="nav-collapse collapse">
                     </div>
                 </div>
@@ -56,7 +56,7 @@
         <div class="container">
             {% block header %}
                 <div class="page-header">
-                    <h1>Welcome to the blog</h1>
+                    <h1>THE FULL-STACK ENTREPRENEUR</h1>
                 </div>
             {% endblock header %}
 
