--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -9,6 +9,7 @@
         <title>{% block title %}Welcome to the full-stack entrepreneur blog. Backend - Frontend - DevOps - Business - Marketing{% endblock title %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="alternate" type="application/rss+xml" title="Blog posts" href="/feeds/posts/">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         {% load staticfiles %}
@@ -39,16 +40,24 @@
         }(document, 'script', 'facebook-jssdk'));</script>
 
         <div class="navbar navbar-static-top navbar-inverse">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toogle="collapse" data-target=".nav-collapse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-nav">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </a>
-                    <a href="" class="brand">FSE Blog</a>
-                    <div class="nav-collapse collapse">
-                    </div>
+                    </button>
+                    <a class="navbar-brand" href="{% url 'blogengine:index' %}">FSE Blog</a>
+                </div>
+                <div class="collapse navbar-collapse" id="header-nav">
+                    <ul class="nav navbar-nav">
+                        {% load flatpages %}
+                        {% get_flatpages as flatpages %}
+                        {% for flatpage in flatpages %}
+                        <li><a href="{{ flatpage.url }}">{{ flatpage.title }}</a></li>
+                        {% endfor %}
+                        <li><a href="/feeds/posts/">RSS feed</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -68,7 +77,7 @@
         <div class="container footer">
             <div class="row">
                 <div class="span12">
-                    <p>Copyright &copy; {% now "Y" %}</p>
+                    <p>Copyright &copy; {% now "Y" %} - Iván Martínez Agüero</p>
                 </div>
             </div>
         </div>
