--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -77,7 +77,7 @@
         <div class="container footer">
             <div class="row">
                 <div class="span12">
-                    <p>Copyright &copy; {% now "Y" %} - Iván Martínez Agüero</p>
+                    <p>Copyright &copy; {% now "Y" %} - Ivan Martinez Aguero</p>
                 </div>
             </div>
         </div>
